[package]
name = "netconsole-receiver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.18.2", features = ["full"]}
color-eyre = "0.6.1"

structopt = "0.3.26"

tracing = "0.1.34"
tracing-subscriber = {version =  "0.3.11", features = ["env-filter"]}

memchr = "2.5.0"

itertools = "0.10.3"

[dev-dependencies]
rand = "0.8"
rand_xoshiro = "0.6"

[profile.release]
strip = true
lto = "fat"
